target/generated-sources/antlr4/ro.uaic.info.alk.parser/AlkParser.java
// Generated from ro.uaic.info.alk.parser/Alk.g4 by ANTLR 4.9.3
package ro.uaic.info.alk.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, LINE_COMMENT=3, ASSERT=4, ASSUME=5, ENSURES=6, HAVOC=7, 
		INVARIANT=8, LOOPASSESRT=9, MODIFIES_ANNO=10, REQURIES=11, SYMBOLIC=12, 
		VAR=13, RESULT=14, OLD=15, IMPLIES=16, EQUIV=17, FORALL=18, EXISTS=19, 
		QUANTIFIER_SEPARATOR=20, TO=21, BREAK=22, CHOOSE=23, CONTINUE=24, FOR=25, 
		FOREACH=26, FROM=27, DO=28, ELSE=29, FAILURE=30, IF=31, IN=32, OUT=33, 
		REPEAT=34, RETURN=35, SUCCESS=36, UNIFORM=37, UNTIL=38, WHILE=39, EMPTYARRAY=40, 
		EMPTYLIST=41, EMPTYMAP=42, EMPTYSET=43, EMPTYSTRUCTURE=44, MODIFIES=45, 
		USES=46, INCLUDE=47, BITWISE_XOR=48, ABS=49, ACOS=50, ASIN=51, ATAN=52, 
		COS=53, LOG=54, PI=55, POW=56, SIN=57, SQRT=58, TAN=59, LEN=60, BOOL_TYPE=61, 
		INT_TYPE=62, FLOAT_TYPE=63, STRING_TYPE=64, ARRAY_TYPE=65, LIST_TYPE=66, 
		MAP_TYPE=67, SET_TYPE=68, STRUCT_TYPE=69, AT=70, EMPTY=71, INSERT=72, 
		KEYS=73, PRINT=74, POPBACK=75, POPFRONT=76, PUSHBACK=77, PUSHFRONT=78, 
		REMOVE=79, REMOVEALLEQTO=80, REMOVEAT=81, SINGLETONSET=82, SIZE=83, SPLIT=84, 
		TOPBACK=85, TOPFRONT=86, UPDATE=87, UNIFORMNAT=88, FLIP=89, UNIFORMFLOAT=90, 
		UNIFORMPERM=91, SOTHAT=92, SYM=93, ARROW=94, NUMSIGN=95, ANNO=96, COUNT=97, 
		UNION=98, INTERSECT=99, SUBTRACT=100, INT=101, FLOAT=102, BOOL=103, ID=104, 
		PLUSPLUS=105, MINUSMINUS=106, BITWISE_AND=107, LOWER=108, GREATER=109, 
		LOWER_EQ=110, GREATER_EQ=111, IS_EQUAL=112, NOT_EQUAL=113, ASSIGNMENT_OPERATOR=114, 
		MINUS=115, PLUS=116, MUL=117, DIV=118, MOD=119, LPAR=120, RPAR=121, LEFT_SHIFT=122, 
		RIGHT_SHIFT=123, OR=124, AND=125, NOT=126, SEMI=127, DPOINT=128, VBAR=129, 
		LCB=130, RCB=131, COMMA=132, POINT=133, LBRA=134, RBRA=135, QUOTE=136, 
		QUESTION=137, STRING=138;
	public static final int
		RULE_main = 0, RULE_configuration = 1, RULE_statement_sequence = 2, RULE_statement = 3, 
		RULE_specification = 4, RULE_declarator = 5, RULE_symbolicDeclarator = 6, 
		RULE_directive = 7, RULE_while_anno = 8, RULE_modif_factor = 9, RULE_loop_assert = 10, 
		RULE_function_uses_list = 11, RULE_function_modifies_list = 12, RULE_function_decl = 13, 
		RULE_req_expression = 14, RULE_ens_expression = 15, RULE_param = 16, RULE_expression = 17, 
		RULE_assign_expression = 18, RULE_conditional_expression = 19, RULE_logical_or_expression = 20, 
		RULE_logical_and_expression = 21, RULE_in_expression = 22, RULE_equality_expression = 23, 
		RULE_relational_expression = 24, RULE_set_expression = 25, RULE_bitwise_or = 26, 
		RULE_bitwise_and = 27, RULE_shift_expression = 28, RULE_additive_expression = 29, 
		RULE_multiplicative_expression = 30, RULE_unary_expression = 31, RULE_postfix_expression = 32, 
		RULE_factor = 33, RULE_base_factor = 34, RULE_anno = 35, RULE_value = 36, 
		RULE_scalar_value = 37, RULE_ref_name = 38, RULE_data_structure = 39, 
		RULE_interval = 40, RULE_spec = 41, RULE_component = 42, RULE_mapping_component = 43, 
		RULE_array = 44, RULE_list = 45, RULE_mapping = 46, RULE_set = 47, RULE_structure = 48, 
		RULE_function_call = 49, RULE_builtin_function = 50, RULE_builtin_method = 51, 
		RULE_dataType = 52, RULE_function_name = 53, RULE_method_name = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "configuration", "statement_sequence", "statement", "specification", 
			"declarator", "symbolicDeclarator", "directive", "while_anno", "modif_factor", 
			"loop_assert", "function_uses_list", "function_modifies_list", "function_decl", 
			"req_expression", "ens_expression", "param", "expression", "assign_expression", 
			"conditional_expression", "logical_or_expression", "logical_and_expression", 
			"in_expression", "equality_expression", "relational_expression", "set_expression", 
			"bitwise_or", "bitwise_and", "shift_expression", "additive_expression", 
			"multiplicative_expression", "unary_expression", "postfix_expression", 
			"factor", "base_factor", "anno", "value", "scalar_value", "ref_name", 
			"data_structure", "interval", "spec", "component", "mapping_component", 
			"array", "list", "mapping", "set", "structure", "function_call", "builtin_function", 
			"builtin_method", "dataType", "function_name", "method_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'@assert'", "'@assume'", "'@ensures'", "'@havoc'", 
			"'@invariant'", "'@loopassert'", "'@modifies'", "'@requires'", "'@symbolic'", 
			"'@var'", "'\\result'", "'\\old'", "'==>'", "'<==>'", "'forall'", "'exists'", 
			"'::'", "'|->'", "'break'", "'choose'", "'continue'", "'for'", "'foreach'", 
			"'from'", "'do'", "'else'", "'failure'", "'if'", "'in'", "'out'", "'repeat'", 
			"'return'", "'success'", "'uniform'", "'until'", "'while'", "'emptyArray'", 
			"'emptyList'", "'emptyMap'", "'emptySet'", "'emptyStructure'", "'modifies'", 
			"'uses'", "'include'", "'xor'", "'abs'", "'acos'", "'asin'", "'atan'", 
			"'cos'", "'log'", "'pi'", "'pow'", "'sin'", "'sqrt'", "'tan'", "'len'", 
			"'boolean'", "'int'", "'float'", "'string'", "'array'", "'list'", "'map'", 
			"'set'", "'struct'", "'at'", "'empty'", "'insert'", "'keys'", "'print'", 
			"'popBack'", "'popFront'", "'pushBack'", "'pushFront'", "'remove'", "'removeAllEqTo'", 
			"'removeAt'", "'singletonSet'", "'size'", "'split'", "'topBack'", "'topFront'", 
			"'update'", "'uniformNat'", "'flip'", "'uniformFloat'", "'uniformPerm'", 
			"'s.t.'", "'$'", "'->'", "'#'", "'@'", "'Count'", "'U'", "'^'", "'\\'", 
			null, null, null, null, "'++'", "'--'", "'&'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'!='", null, "'-'", "'+'", "'*'", "'/'", "'%'", "'('", 
			"')'", "'<<'", "'>>'", "'||'", "'&&'", "'!'", "';'", "':'", "'|'", "'{'", 
			"'}'", "','", "'.'", "'['", "']'", "'\"'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "LINE_COMMENT", "ASSERT", "ASSUME", "ENSURES", 
			"HAVOC", "INVARIANT", "LOOPASSESRT", "MODIFIES_ANNO", "REQURIES", "SYMBOLIC", 
			"VAR", "RESULT", "OLD", "IMPLIES", "EQUIV", "FORALL", "EXISTS", "QUANTIFIER_SEPARATOR", 
			"TO", "BREAK", "CHOOSE", "CONTINUE", "FOR", "FOREACH", "FROM", "DO", 
			"ELSE", "FAILURE", "IF", "IN", "OUT", "REPEAT", "RETURN", "SUCCESS", 
			"UNIFORM", "UNTIL", "WHILE", "EMPTYARRAY", "EMPTYLIST", "EMPTYMAP", "EMPTYSET", 
			"EMPTYSTRUCTURE", "MODIFIES", "USES", "INCLUDE", "BITWISE_XOR", "ABS", 
			"ACOS", "ASIN", "ATAN", "COS", "LOG", "PI", "POW", "SIN", "SQRT", "TAN", 
			"LEN", "BOOL_TYPE", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", "ARRAY_TYPE", 
			"LIST_TYPE", "MAP_TYPE", "SET_TYPE", "STRUCT_TYPE", "AT", "EMPTY", "INSERT", 
			"KEYS", "PRINT", "POPBACK", "POPFRONT", "PUSHBACK", "PUSHFRONT", "REMOVE", 
			"REMOVEALLEQTO", "REMOVEAT", "SINGLETONSET", "SIZE", "SPLIT", "TOPBACK", 
			"TOPFRONT", "UPDATE", "UNIFORMNAT", "FLIP", "UNIFORMFLOAT", "UNIFORMPERM", 
			"SOTHAT", "SYM", "ARROW", "NUMSIGN", "ANNO", "COUNT", "UNION", "INTERSECT", 
			"SUBTRACT", "INT", "FLOAT", "BOOL", "ID", "PLUSPLUS", "MINUSMINUS", "BITWISE_AND", 
			"LOWER", "GREATER", "LOWER_EQ", "GREATER_EQ", "IS_EQUAL", "NOT_EQUAL", 
			"ASSIGNMENT_OPERATOR", "MINUS", "PLUS", "MUL", "DIV", "MOD", "LPAR", 
			"RPAR", "LEFT_SHIFT", "RIGHT_SHIFT", "OR", "AND", "NOT", "SEMI", "DPOINT", 
			"VBAR", "LCB", "RCB", "COMMA", "POINT", "LBRA", "RBRA", "QUOTE", "QUESTION", 
			"STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alk.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	 
		public MainContext() { }
		public void copyFrom(MainContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StartPointContext extends MainContext {
		public Statement_sequenceContext statement_sequence() {
			return getRuleContext(Statement_sequenceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AlkParser.EOF, 0); }
		public StartPointContext(MainContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterStartPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitStartPoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitStartPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			_localctx = new StartPointContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			statement_sequence();
			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigurationContext extends ParserRuleContext {
		public ConfigurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configuration; }
	 
		public ConfigurationContext() { }
		public void copyFrom(ConfigurationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConfigContext extends ConfigurationContext {
		public TerminalNode EOF() { return getToken(AlkParser.EOF, 0); }
		public List<TerminalNode> ID() { return getTokens(AlkParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AlkParser.ID, i);
		}
		public List<TerminalNode> TO() { return getTokens(AlkParser.TO); }
		public TerminalNode TO(int i) {
			return getToken(AlkParser.TO, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ConfigContext(ConfigurationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitConfig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitConfig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigurationContext configuration() throws RecognitionException {
		ConfigurationContext _localctx = new ConfigurationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_configuration);
		int _la;
		try {
			_localctx = new ConfigContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(113);
				match(ID);
				setState(114);
				match(TO);
				setState(115);
				expression();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_sequenceContext extends ParserRuleContext {
		public Statement_sequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_sequence; }
	 
		public Statement_sequenceContext() { }
		public void copyFrom(Statement_sequenceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementSeqContext extends Statement_sequenceContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementSeqContext(Statement_sequenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterStatementSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitStatementSeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitStatementSeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement_sequenceContext statement_sequence() throws RecognitionException {
		Statement_sequenceContext _localctx = new Statement_sequenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement_sequence);
		int _la;
		try {
			_localctx = new StatementSeqContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSERT) | (1L << ASSUME) | (1L << ENSURES) | (1L << HAVOC) | (1L << REQURIES) | (1L << SYMBOLIC) | (1L << VAR) | (1L << RESULT) | (1L << OLD) | (1L << FORALL) | (1L << EXISTS) | (1L << BREAK) | (1L << CHOOSE) | (1L << CONTINUE) | (1L << FOR) | (1L << FOREACH) | (1L << DO) | (1L << FAILURE) | (1L << IF) | (1L << REPEAT) | (1L << RETURN) | (1L << SUCCESS) | (1L << UNIFORM) | (1L << WHILE) | (1L << EMPTYARRAY) | (1L << EMPTYLIST) | (1L << EMPTYMAP) | (1L << EMPTYSET) | (1L << EMPTYSTRUCTURE) | (1L << ABS) | (1L << ACOS) | (1L << ASIN) | (1L << ATAN) | (1L << COS) | (1L << LOG) | (1L << PI) | (1L << POW) | (1L << SIN) | (1L << SQRT) | (1L << TAN) | (1L << LEN) | (1L << INT_TYPE) | (1L << FLOAT_TYPE))) != 0) || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & ((1L << (PRINT - 74)) | (1L << (SINGLETONSET - 74)) | (1L << (UNIFORMNAT - 74)) | (1L << (FLIP - 74)) | (1L << (UNIFORMFLOAT - 74)) | (1L << (UNIFORMPERM - 74)) | (1L << (SYM - 74)) | (1L << (NUMSIGN - 74)) | (1L << (ANNO - 74)) | (1L << (INT - 74)) | (1L << (FLOAT - 74)) | (1L << (BOOL - 74)) | (1L << (ID - 74)) | (1L << (PLUSPLUS - 74)) | (1L << (MINUSMINUS - 74)) | (1L << (LOWER - 74)) | (1L << (MINUS - 74)) | (1L << (PLUS - 74)) | (1L << (LPAR - 74)) | (1L << (NOT - 74)) | (1L << (LCB - 74)) | (1L << (LBRA - 74)))) != 0) || _la==STRING) {
				{
				{
				setState(123);
				statement();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ToDirectiveContext extends StatementContext {
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public ToDirectiveContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterToDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitToDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitToDirective(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarContext extends StatementContext {
		public TerminalNode VAR() { return getToken(AlkParser.VAR, 0); }
		public List<DeclaratorContext> declarator() {
			return getRuleContexts(DeclaratorContext.class);
		}
		public DeclaratorContext declarator(int i) {
			return getRuleContext(DeclaratorContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AlkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AlkParser.COMMA, i);
		}
		public VarContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForEachStructureContext extends StatementContext {
		public TerminalNode FOREACH() { return getToken(AlkParser.FOREACH, 0); }
		public TerminalNode ID() { return getToken(AlkParser.ID, 0); }
		public TerminalNode FROM() { return getToken(AlkParser.FROM, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<While_annoContext> while_anno() {
			return getRuleContexts(While_annoContext.class);
		}
		public While_annoContext while_anno(int i) {
			return getRuleContext(While_annoContext.class,i);
		}
		public Loop_assertContext loop_assert() {
			return getRuleContext(Loop_assertContext.class,0);
		}
		public ForEachStructureContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).enterForEachStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlkListener ) ((AlkListener)listener).exitForEachStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlkVisitor ) return ((AlkVisitor<? extends T>)visitor).visitForEachStructure(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForStructureContext extends StatementContext {
		public TerminalNode FOR() { return getToken(AlkParser.FOR, 0); }
		public TerminalNode LPAR() { return getToken(AlkParser.LPAR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(AlkParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(AlkParser.SEMI, i);
		}
		public TerminalNode RPAR() { return getToken(AlkParser.RPAR, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
